# Sleep-Stage-Classification

./: README.md  pyproject.toml
sleep_edf/: main.ipynb
sleep_edf/conf/: config.yaml
sleep_edf/conf/Bpass_Ftrans/: P10.yaml  P20.yaml  P30.yaml  P40.yaml
sleep_edf/experiment/: create_experiments.py  main.py  performance_eval.py
sleep_edf/experiment/Performance/20240725_105500/: Performance_Evaluation(20240725_105500).aux  Performance_Evaluation(20240725_105500).tex
sleep_edf/experiment/Performance/jobs/: write_latex.py
sleep_edf/experiment/artifact01/b6334138c594408da94e743f520917a1/artifacts/: feature_importance_weight.json
sleep_edf/experiment/artifact01/b6334138c594408da94e743f520917a1/artifacts/config/: P1.yaml
sleep_edf/experiment/artifact01/b6334138c594408da94e743f520917a1/artifacts/model/: MLmodel  conda.yaml  input_example.json  model.xgb  requirements.txt
sleep_edf/experiment/jobs/: __init__.py  write_latex.py
sleep_edf/experiment/mlruns/0/: meta.yaml
sleep_edf/experiment/mlruns/499028619195617160/: meta.yaml
sleep_edf/experiment/mlruns/499028619195617160/b6334138c594408da94e743f520917a1/: meta.yaml
sleep_edf/experiment/mlruns/499028619195617160/b6334138c594408da94e743f520917a1/metrics/: Test Accuracy  Test f1_macro  Test f1_weight  Unknown f1_macro  Unknown f1_weight  best_iteration  stopped_iteration  (+1 more)
sleep_edf/experiment/setting/: __init__.py
sleep_edf/src/: data.py
sleep_edf/src/data/: dataframe.py  stats_utils.py
sleep_edf/src/model/: __init__.py  model.py  train.py
sleep_edf/src/model/setting/: __init__.py
(+12 files in other folders)
